infra/yt-nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yt-nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yt-nats
  template:
    metadata:
      labels:
        app: yt-nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "youtube-music",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: yt-nats-srv
spec:
  selector:
    app: yt-nats
  ports:
    - name: yt-nats
      protocol: TCP
      port: 4222
      targetPort: 4222
  type: ClusterIP
