infra/yt-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yt-ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - yt-music-1-local.dev
      secretName: tls-secret
  rules:
    - host: yt-music-1-local.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: yt-music-broker-srv
                port:
                  number: 4006
